--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,10 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.8.5</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.2</version>
+		</dependency>
 	</dependencies>
 </project>
